fixed spacing bug I just introduced

--- a/themes/matrix/local/theme.css
+++ b/themes/matrix/local/theme.css
@@ -130,6 +130,9 @@ body.gallery {
 
 #gsNavBar {
     border-top-width: 1px;
+}
+
+.album #gsNavBar {
 	float: right;
 }
 
